# CEX-rust

./: .env.example  .gitignore  Cargo.toml  README.md  schema.sql
src/: main.rs
src/api/: mod.rs  service.rs  types.rs
src/balance/: mod.rs
src/database/: mod.rs  models.rs  queries.rs
src/matching_engine/: engine.rs  messages.rs  mod.rs  orderbook.rs  types.rs
src/redis/: message.rs  mod.rs
src/websocket/: events.rs  mod.rs  server.rs
