[package]
name = "cex"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.33"
tokio = { version = "1.0", features = ["full"] }
crossbeam = "0.8"
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
actix-web = "4.4"
actix-cors = "0.6"
anyhow = "1.0"

sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "rust_decimal", "migrate"] }
dotenvy = "0.15"